# agentguard

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
agentguard/: __init__.py  __main__.py  cli.py  exceptions.py  firewall.py  firewall_ops.py  firewall_types.py
agentguard/adapters/: __init__.py  autogen.py  crewai.py  langgraph.py
agentguard/audit/: __init__.py  logger.py  otel.py
agentguard/capability/: __init__.py  enforcer.py  manifest.py
agentguard/inspector/: __init__.py  consistency.py  ml_scorer.py  model_paths.py  rule_filter.py
agentguard/mcp/: __init__.py  output_inspector.py
agentguard/models/: model.sha256  scorer_config.json  tokenizer_config.json
agentguard/schemas/: capability_manifest.schema.json
agentguard/trust/: __init__.py  authority.py  signing.py
benchmarks/: __init__.py  build_dataset_from_public.py  evaluate.py  generate_dataset.py
benchmarks/dataset/: README.md  generation_manifest.json
benchmarks/results/: holdout_report.md  report.md  toolkit_comparison_samples.json
docs/: ANTHROPIC_DATASET_RUNBOOK.md  BLOG_POST.md  BLOG_POST_DRAFT.md  DESIGN.md  HUGGINGFACE_DATASET_CARD.md  MICROSOFT_TOOLKIT_COMPARISON.md  PROJECT_GUIDE_FOR_NEWCOMERS.md  READTHEDOCS_SETUP.md  RELEASE_NOTES_v0.1.0-draft.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v1.0.0.md  REQUIREMENTS.md  V1_ROADMAP.md  requirements.txt
docs/source/: api.rst  blog.md  comparison.md  conf.py  design.md  index.rst  latency.md  quickstart.md  requirements.md
examples/: autogen_example.py  crewai_example.py  mcp_poisoning_demo.py
examples/secured_pipeline/: pipeline.py
examples/vulnerable_pipeline/: pipeline.py
manifests/: code_agent.yaml  comms_agent.yaml  orchestrator.yaml  research_agent.yaml  researcher.yaml  writer.yaml
schemas/: capability_manifest.schema.json
scripts/: LAUNCH_CHECKLIST.md  check_v1_gates.py  create_github_release.ps1  download_kaggle_model.ps1  download_release_model.py  install_model.ps1  install_model.sh  pre_public_check.ps1  publish_huggingface.ps1  publish_pypi.ps1  push_kaggle_kernel.ps1  retrain_checklist.ps1  run_benchmark_evaluation.ps1  run_dataset_generation.ps1  run_public_dataset_build.ps1  run_toolkit_comparison.py  run_training.ps1  ship_v1.ps1  verify_model.py  verify_release.ps1
scripts/kaggle/: dataset-metadata.json  kernel-metadata.json
tests/: conftest.py  test_adapters.py  test_audit_logger.py  test_capability.py  test_cli.py  test_dataset_generator.py  test_evaluator.py  test_export_onnx.py  test_firewall.py  test_firewall_otel.py  test_inspector.py  test_integration.py  test_mcp_inspector.py  test_model_paths.py  test_otel.py  test_prepare_dataset.py  test_probe_checkpoint.py  test_public_dataset_builder.py  test_scoring.py  test_trust.py
training/: __init__.py  export_onnx.py  kaggle_notebook.ipynb  prepare_dataset.py  probe_checkpoint.py  scoring.py  tokenizer_utils.py  train.py
