[tool.poetry]
name = "inter-agent-guard"
version = "0.1.0"
description = "Inter-agent security firewall for multi-agent AI systems"
authors = ["AgentGuard Contributors"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/nizba06/agentguard"
repository = "https://github.com/nizba06/agentguard"
documentation = "https://inter-agent-guard.readthedocs.io/"
keywords = ["agents", "security", "firewall", "langgraph", "prompt-injection", "multi-agent"]
# Distribution name is inter-agent-guard (PyPI); import remains agentguard.
packages = [
    { include = "agentguard" },
]
include = [
    "agentguard/models/model.sha256",
    "agentguard/models/tokenizer.json",
    "agentguard/models/tokenizer_config.json",
    "agentguard/schemas/capability_manifest.schema.json",
]

[tool.poetry.scripts]
agentguard = "agentguard.cli:main"

[tool.poetry.group.training.dependencies]
transformers = ">=4.40"
datasets = ">=2.19"
optimum = { version = ">=1.19", extras = ["onnxruntime"] }
scikit-learn = ">=1.4"
accelerate = ">=0.27"
sentencepiece = ">=0.2"
protobuf = ">=3.20"
tiktoken = ">=0.7"
torch = ">=2.2"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pynacl = ">=1.5"
pyahocorasick = ">=2.0"
jsonschema = ">=4.0"
PyYAML = ">=6.0"
onnxruntime = ">=1.17"
transformers = ">=4.40"
sentence-transformers = ">=2.7"
numpy = ">=1.26"
structlog = ">=24.0"
langgraph = { version = ">=0.2", optional = true }
crewai = { version = ">=0.70", optional = true }
pyautogen = { version = ">=0.4", optional = true }
opentelemetry-sdk = { version = ">=1.24", optional = true }
opentelemetry-exporter-otlp = { version = ">=1.24", optional = true }

[tool.poetry.extras]
otel = ["opentelemetry-sdk", "opentelemetry-exporter-otlp"]
langgraph = ["langgraph"]
crewai = ["crewai"]
autogen = ["pyautogen"]
all = ["langgraph", "crewai", "pyautogen"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
hypothesis = ">=6.0"
ruff = ">=0.4"
mypy = ">=1.9"
pre-commit = ">=3.7"
types-PyYAML = ">=6.0"
types-jsonschema = ">=4.0"
anthropic = ">=0.40"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.2"
sphinx-rtd-theme = ">=2.0"
myst-parser = ">=3.0"

[tool.poetry.group.training]
optional = true

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "kaggle-verify",
    "kaggle-model-pull",
    "kaggle-output",
    "kaggle-output-check",
    "kaggle-v8-output",
    "kaggle-pull",
    "kaggle-status-pull",
    "kaggle-dataset-dl",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "E501"]
"training/*" = ["S", "T201", "E501"]
"benchmarks/*" = ["S", "T201", "E501"]
"training/*.ipynb" = ["ALL"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agentguard --cov-report=term-missing --cov-fail-under=85"
markers = [
    "ml_model: opt in to auto-loading the bundled ONNX risk scorer",
]
